[metadata]
name = rectory
version = 0.1.0
author = PiliPala
author_email = pypi@pilipala.io
description = Create rez packages.
keywords = rez, build, create, package
license = GPLv3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pilipalaio/rectory
project_urls =
    Bug Tracker = https://github.com/pilipalaio/rectory/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Software Development :: Build Tools

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    pip >= 18.0

[options.packages.find]
where = src
